Create new directives ('domain-lua-scripting','domain-lua-code-block')

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -267,6 +267,9 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/domains/domain-caching-rule/domainCachingRule.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-custom-vcl/domainCustomVcl.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-custom-vcl-backends/domainCustomVclBackends.directive.js"></script>
+<script type="text/javascript" src="js/portal/domains/domain-lua-scripting/domainLuaCodeBlock.directive.js"></script>
+<script type="text/javascript" src="js/portal/domains/domain-lua-scripting/domainLuaScripting.directive.js"></script>
+
 <script type="text/javascript" src="js/portal/domains/origin-request-headers/originRequestHeaders.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/end-user-response-headers/endUserResponseHeaders.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/controller/domainsCrud.controller.js"></script>
