--- a/code/dev/parts/domains/domain-lua-scripting/modal/confirmModalDeleteLuaBlock.tpl.html
+++ b/code/dev/parts/domains/domain-lua-scripting/modal/confirmModalDeleteLuaBlock.tpl.html
@@ -2,7 +2,7 @@
   <h3 class="modal-title">Confirm</h3>
 </div>
 <div class="modal-body">
-  Are you sure you want to delete the Lua block<span ng-if="model.location"> with name <strong>"{{model.location}}"</strong></span>?
+  Are you sure you want to delete the Lua block<span ng-if="model.location"> for location <strong>"{{model.location}}"</strong></span>?
 </div>
 <div class="modal-footer">
   <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
