--- a/code/dev/parts/profile/activity-log.html
+++ b/code/dev/parts/profile/activity-log.html
@@ -61,7 +61,7 @@
           </div>
         </div>
         <div class="panel-body">
-          <div class="row">
+          <div class="row form-group">
             <filter-activity-log ng-model="activityFilterObj" on-apply="list" ng-disable="_loading"></filter-activity-log>
           </div>
           <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
