--- a/code/dev/parts/shared/filter-activity-log/activity-who-performed-select.tpl.html
+++ b/code/dev/parts/shared/filter-activity-log/activity-who-performed-select.tpl.html
@@ -1,5 +1,8 @@
 <div class="activity-who-performed-select">
-  <select class="form-control col-sm-12" name="userId" ng-model="$ctrl.whoPerformed" ng-options="item as item.name for item in $ctrl.whoPerformedList">
-    <option value="">All Users and All API Keys</option>
-  </select>
+  <ui-select ng-model="$ctrl.whoPerformed" theme="select2" ng-animate-disabled ng-disabled="_loading" on-select="onAccountSelect($model)" style="min-width: 100%;" id="account_id" name="accountId">
+    <ui-select-match placeholder="All Users and All API Keys">{{$select.selected.name}}</ui-select-match>
+    <ui-select-choices repeat="item as item in $ctrl.whoPerformedList | filter: {name: $select.search}">
+      <div ng-bind-html="item.name|highlight: $select.search"></div>
+    </ui-select-choices>
+  </ui-select>
 </div>
