Update Activity Log Page - fix ui elements

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -167,6 +167,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/shared/directives/typeahead.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/focus-me.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/filter-activity-log/filterActivityLog.directive.js"></script>
+<script type="text/javascript" src="js/portal/shared/filter-activity-log/filterActivityLogDaterangepicker.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/filter-activity-log/activityTargetSelect.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/filter-activity-log/activityWhoPerformedSelect.directive.js"></script>
 <!--<script type="text/javascript" src="js/portal/shared/directives/confirm-on-exit.directive.js"></script>-->
