--- a/code/dev/parts/shared/filter-activity-log/filter-activity-log.tpl.html
+++ b/code/dev/parts/shared/filter-activity-log/filter-activity-log.tpl.html
@@ -1,6 +1,6 @@
 <form name="filterActivityLogForm" class="filter-activity-log" ng-submit="$ctrl.onSetFilter($ctrl.newFilterState)">
   <div class="col-sm-6 ">
-    <div class="panel panel-info panel-heading">
+    <div class="panel panel-info panel-body">
       <div class="text text-info filter-activity-log__help">
         <p><b>You can filter the audit records by:</b></p>
         <ul>
@@ -11,33 +11,23 @@
     </div>
   </div>
   <div class="col-sm-6 ">
-    <label class=" col-xs-12 col-sm-12 col-md-12">a) Action Taker</label>
-    <div class="col-xs-12 col-sm-12 col-md-12">
-      <div class="row  ">
-        <activity-who-performed-select style="margin-left: 10px;" ng-model="$ctrl.newFilterState.whoPerformed"></activity-who-performed-select>
+    <div class="panel panel-info panel-body">
+      <label class="text text-info col-xs-12 col-sm-12 col-md-12">a) Action Taker</label>
+      <div class="col-xs-12 col-sm-12 col-md-12">
+        <div class="row  ">
+          <activity-who-performed-select style="margin-left: 10px;" ng-model="$ctrl.newFilterState.whoPerformed"></activity-who-performed-select>
+        </div>
       </div>
     </div>
   </div>
   <!-- Filter By Action Taker -->
   <div class="form-horizontal col-sm-12">
-    <!--     <div class="col-sm-12 ">
-      <label class=" col-xs-12 col-sm-4 col-md-4">Action Taker</label>
-      <div class="col-xs-12 col-sm-8 col-md-8">
-        <div class="row  ">
-          <activity-who-performed-select style="margin-left: 10px;" ng-model="$ctrl.newFilterState.whoPerformed"></activity-who-performed-select>
-        </div>
-      </div>
-    </div> -->
     <!-- Filter By Action Target Object -->
-    <div class="col-sm-12">
-      <label class="col-sm-12">b) Action Target Object</label>
+    <div class="panel panel-info panel-body">
+      <label class="text text-info col-sm-12">b) Action Target Object</label>
       <div class="row form-group">
         <div class="col-xs-12 col-sm-12 col-md-4">
-          <div class="date-picker-wrapper">
-            <input date-range-picker="" ng-model="$ctrl.datePicker.date" options="::$ctrl.datePicker.options" min="$ctrl.datePicker.minDate" max="$ctrl.datePicker.maxDate" class="form-control date-picker select2" type="text" readonly/>
-            <!-- TODO: fix show data info-->
-            <!--       <input ng-show="$ctrl.datePicker.overlay.show" ng-focus="$ctrl.handlers.overlayClickHandler()" ng-model="$ctrl.datePicker.overlay.val" class="over form-control select2" type="text" /> -->
-          </div>
+          <filter-activity-log-daterangepicker ranges="$ctrl.ranges" ng-model="$ctrl.datePicker"></filter-activity-log-daterangepicker>
         </div>
         <div class=" col-xs-12 col-sm-12 col-md-4">
           <ui-select ng-model="$ctrl.newFilterState.target_type" theme="select2" ng-animate-disabled ng-disabled="_loading" style="min-width: 100%;" name="targetType">
@@ -48,7 +38,7 @@
           </ui-select>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4">
-          <ui-select ng-model="$ctrl.newFilterState.activity_type" theme="select2" ng-animate-disabled ng-disabled="_loading"   style="min-width: 100%;" name="targetType">
+          <ui-select ng-model="$ctrl.newFilterState.activity_type" theme="select2" ng-animate-disabled ng-disabled="_loading" style="min-width: 100%;" name="targetType">
             <ui-select-match placeholder="All Activity Types">{{$select.selected.name}}</ui-select-match>
             <ui-select-choices repeat="item.id as item in $ctrl.activityTypeList| filter: {name: $select.search}">
               <div ng-bind-html="item.name|highlight: $select.search"></div>
@@ -56,7 +46,7 @@
           </ui-select>
         </div>
       </div>
-      <div class="row form-group">
+      <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-8">
           <activity-target-select target-type="{{$ctrl.newFilterState.target_type}}" ng-model="$ctrl.newFilterState.activityTarget"></activity-target-select>
         </div>
