--- a/code/dev/parts/domains/new.html
+++ b/code/dev/parts/domains/new.html
@@ -99,7 +99,9 @@
                    popover-append-to-body="{{true}}"
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
-                   uib-popover="Enter here a domain name to be used in 'Host' header in requests sent from RevAPM to the origin server">Origin Host Header *</label>
+                   uib-popover="Enter here a domain name to be used in 'Host' header of requests sent from RevAPM to
+ the origin server. The name might be different from origin server name/IP specified above. For example, if origin server IP is 11.11.11.11 and the origin HTTP server recognizes web requests for domain 'www.example.com' you will need to 
+specify '11.11.11.11' in origin server name field above and 'www.example.com' in this field.">Origin Host Header *</label>
 
             <div class="col-sm-10">
               <input type="text"
