--- a/code/dev/parts/apps/new.html
+++ b/code/dev/parts/apps/new.html
@@ -22,7 +22,8 @@
       <div class="panel-body">
         <form name="createForm" class="form-horizontal" novalidate>
           <div class="form-group" ng-class="{'has-error': createForm.app_name.$invalid && createForm.app_name.$dirty}">
-            <label for="app_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter a name for the app to be registered (50 characters max)">App Name *
+            <label for="app_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter a name for the app to be registered (50 characters max). Duplicate
+              application names are not allowed.">App Name *
             </label>
             <div class="col-sm-10">
               <input type="text" name="app_name" class="form-control" ng-disabled="_loading" ng-model="model.app_name" ng-maxlength="50" id="app_name"
