--- a/code/dev/parts/domains/new.html
+++ b/code/dev/parts/domains/new.html
@@ -32,7 +32,8 @@
                    popover-append-to-body="{{true}}"
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
-                   uib-popover="Enter here a website/API domain name to be served by RevAPM"
+                   uib-popover="Enter here a website/API domain name to be served by RevAPM. Duplicate domain names are not allowed.
+                    If the system will complain about a duplicate domain name but you are the rightful domain owner please contact the RevAPM Customer Support service."
                    >Domain Name *</label>
 
             <div class="col-sm-10">
