--- a/code/dev/parts/shared/filter-activity-log/filter-activity-log.tpl.html
+++ b/code/dev/parts/shared/filter-activity-log/filter-activity-log.tpl.html
@@ -14,8 +14,18 @@
     <div class="panel panel-info panel-body">
       <label class="text text-info col-xs-12 col-sm-12 col-md-12">a) Action Taker</label>
       <div class="col-xs-12 col-sm-12 col-md-12">
-        <div class="row  ">
-          <activity-who-performed-select style="margin-left: 10px;" ng-model="$ctrl.newFilterState.whoPerformed"></activity-who-performed-select>
+         <div class="row form-group" ng-if="auth.isReseller() || auth.isRevadmin()">
+          <div style="margin-left: 10px;">
+            <ui-select ng-model="$ctrl.newFilterState.account_id" theme="select2" ng-animate-disabled ng-disabled="_loading" style="width:100%;" id="account_id" name="accountId">
+              <ui-select-match placeholder="Select Account">{{$select.selected.name}}</ui-select-match>
+              <ui-select-choices repeat="item.id as item in $ctrl.accountList | filter: {name: $select.search}">
+                <div ng-bind-html="item.name|highlight: $select.search"></div>
+              </ui-select-choices>
+            </ui-select>
+          </div>
+        </div>
+        <div class="row">
+          <activity-who-performed-select style="margin-left: 10px;" account_id="{{$ctrl.newFilterState.account_id}}" ng-model="$ctrl.newFilterState.whoPerformed"></activity-who-performed-select>
         </div>
       </div>
     </div>
@@ -48,7 +58,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-8">
-          <activity-target-select target-type="{{$ctrl.newFilterState.target_type}}" ng-model="$ctrl.newFilterState.activityTarget"></activity-target-select>
+          <activity-target-select account_id="{{$ctrl.newFilterState.account_id}}" target-type="{{$ctrl.newFilterState.target_type}}" ng-model="$ctrl.newFilterState.activityTarget"></activity-target-select>
         </div>
       </div>
     </div>
