--- a/code/dev/parts/logshippers/list.html
+++ b/code/dev/parts/logshippers/list.html
@@ -42,9 +42,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h2 class="pull-left page-title">
-        Log Shipping Jobs  <span>
-                <button class="btn btn-primary btn-sm" uib-tooltip="Refresh" ng-click="list()" ng-disabled="_load"><i class="glyphicon" ng-class="_loading ? 'glyphicon-refresh spin': 'glyphicon-refresh'"></i></button>
-              </span>
+        Log Shipping Jobs
       </h2>
     </div>
   </div>
@@ -54,10 +52,18 @@
         <div class="panel-heading">
           <div class="row">
             <div class="col-md-12">
-              <div class="pull-left">
+              <div class="form-inline pull-left">
+               <div class="form-group">
                 <a ui-sref=".new" class="btn btn-success" ng-disabled="_loading">
                   <i class="glyphicon glyphicon-plus"></i>&nbsp; Add New Log Shipping Job
                 </a>
+
+                </div>
+                 <div class="form-group">
+                  <button class="btn btn-success" ng-disabled="_loading" ng-click="onClickRefresh()">
+                    <i class="glyphicon glyphicon-refresh" ng-class="_loading ? 'spin' : ''"></i>&nbsp; Refresh
+                    </dutton>
+                </div>
               </div>
               <div class="pull-right">
                 <form class="form-inline">
