--- a/code/dev/parts/dashboard/widgets/web-analytics/widget-title-with-params.tpl.html
+++ b/code/dev/parts/dashboard/widgets/web-analytics/widget-title-with-params.tpl.html
@@ -25,7 +25,8 @@
 <small ng-if="definition.config.filters.count_last_day" >
   Last {{definition.config.filters.count_last_day}} <span ng-if="definition.config.filters.count_last_day == '1'"> Day</span>
 <span ng-if="definition.config.filters.count_last_day !== '1'"> Days</span></small>
-<span class="widget_filters_info" ng-show="!!definition.config.filters[index.key]" ng-repeat="index in [{key:'os',title:'OS'},{key:'country',title:'Сountry'},{key:'device',title:'Device'}]">
+<small ng-if="!!definition.config.filters.country && definition.config.filters.country!=='-'">&nbsp;Country: {{definition.config.info.country}}&nbsp;</small>
+<span class="widget_filters_info" ng-show="!!definition.config.filters[index.key]" ng-repeat="index in [{key:'os',title:'OS'} {key:'device',title:'Device'}]">
   <small ng-if="!!definition.config.filters[index.key]&& definition.config.filters[index.key]!=='-'">&nbsp;{{index.title}}: {{definition.config.filters[index.key]}}&nbsp;</small>
 </span>
 
