--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -266,6 +266,11 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/domains/domain-select/domainSelect.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-staging-status/domainStagingStatus.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-caching-rule/domainCachingRule.directive.js"></script>
+<script type="text/javascript" src="js/portal/domains/domain-check-integration/domainCheckIntegration.directive.js"></script>
+<script type="text/javascript" src="js/portal/domains/domain-check-integration/domainCheckIntegrationPanel.directive.js"></script>
+
+
+
 <script type="text/javascript" src="js/portal/domains/domain-custom-vcl/domainCustomVcl.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-custom-vcl-backends/domainCustomVclBackends.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-lua-scripting/domainLuaCodeBlock.directive.js"></script>
@@ -273,6 +278,7 @@ ga('create',  window.gaAccount, 'auto');
 
 <script type="text/javascript" src="js/portal/domains/origin-request-headers/originRequestHeaders.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/end-user-response-headers/endUserResponseHeaders.directive.js"></script>
+<script type="text/javascript" src="js/portal/domains/controller/domainCheckIntegrationPage.controller.js"></script>
 <script type="text/javascript" src="js/portal/domains/controller/domainsCrud.controller.js"></script>
 <!-- TODO: delete - depricated <script type="text/javascript" src="js/portal/domains/controller/domainConfigureAdvanced.controller.js"></script> -->
 <script type="text/javascript" src="js/portal/domains/controller/domainVersions.controller.js"></script>
