--- a/code/dev/parts/domains/list.html
+++ b/code/dev/parts/domains/list.html
@@ -146,6 +146,9 @@
                   <a ui-sref=".versions({id: item.id})" ng-if="!item.loading" uib-tooltip="Previous Versions">
                     <i class="glyphicon glyphicon-book"></i>
                   </a>
+                  <a ui-sref=".checkintegration({id: item.id})" ng-if="!item.loading" uib-tooltip="Check Integration">
+                    <i class="fa fa-share-square-o"></i>
+                  </a>
                 </td>
                 <td ng-if="auth.isReseller() ||  auth.isRevadmin()">
                   <div>{{item.companyName}}</div>
